parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> ESTRUCTURA
Rule 1     ESTRUCTURA -> Funciones PROGRAMA ID seenIDprograma SEMICOLON Variables_Globales LCBRACE Contenido RCBRACE programExit
Rule 2     seenIDprograma -> <empty>
Rule 3     programExit -> <empty>
Rule 4     Funciones -> NULL
Rule 5     Funciones -> EstructuraFuncion
Rule 6     Funciones -> EstructuraFuncion Funciones
Rule 7     EstructuraFuncion -> FUNCION ID seenIDfunc LPAREN Parametros RPAREN COLON TIPO SEMICOLON LCBRACE Contenido RCBRACE funcExit
Rule 8     seenIDfunc -> <empty>
Rule 9     funcExit -> <empty>
Rule 10    Parametros -> Para
Rule 11    Para -> NULL
Rule 12    Para -> TIPO ID seenIDparam
Rule 13    Para -> TIPO ID seenIDparam COMMA Para
Rule 14    seenIDparam -> <empty>
Rule 15    Estatuto -> Estatuto_Asignacion
Rule 16    Estatuto -> Estatuto_Condicion
Rule 17    Estatuto -> Estatuto_Escritura_de_puerto
Rule 18    Estatuto -> Estatuto_Ciclo
Rule 19    Estatuto -> Estatuto_Lectura_de_puerto
Rule 20    Estatuto -> Imprimir
Rule 21    Estatuto -> Declaracion_de_variables
Rule 22    Estatuto -> LlamadaFuncion
Rule 23    Estatuto -> regresaDeFuncion
Rule 24    regresaDeFuncion -> REGRESA Expresion SEMICOLON
Rule 25    LlamadaFuncion -> ID LPAREN MULTIARG RPAREN SEMICOLON
Rule 26    LlamadaFuncion -> ID LPAREN RPAREN SEMICOLON
Rule 27    Estatuto_Asignacion -> ID EQUALS AssignOption
Rule 28    AssignOption -> Expresion SEMICOLON
Rule 29    AssignOption -> LlamadaFuncion
Rule 30    AssignOption -> TIPO LPAREN ARG RPAREN SEMICOLON
Rule 31    Declaracion_de_variables -> TIPO COLON ID seenIDdeclVar SEMICOLON
Rule 32    Declaracion_de_variables -> TIPO COLON ID seenIDdeclVar EQUALS Expresion SEMICOLON
Rule 33    seenIDdeclVar -> <empty>
Rule 34    Estatuto_Condicion -> SI LPAREN Expresion RPAREN LCBRACE Contenido RCBRACE SINO LCBRACE Contenido RCBRACE
Rule 35    Imprimir -> IMPRIMECONSOLA MULTIARG SEMICOLON
Rule 36    MULTIARG -> ARG COMMA MULTIARG
Rule 37    MULTIARG -> ARG
Rule 38    ARG -> ID
Rule 39    ARG -> CTE
Rule 40    Estatuto_Escritura_de_puerto -> ESCRIBEPUERTO PUERTO ID SEMICOLON
Rule 41    Estatuto_Lectura_de_puerto -> ID EQUALS LEEPUERTO PUERTO SEMICOLON
Rule 42    PUERTO -> B
Rule 43    PUERTO -> C
Rule 44    PUERTO -> D
Rule 45    Estatuto_Ciclo -> CICLO LPAREN Expresion RPAREN LCBRACE Contenido RCBRACE
Rule 46    Expresion -> EX
Rule 47    EX -> Exp Compara Exp
Rule 48    EX -> NOT Exp Compara Exp
Rule 49    EX -> Exp
Rule 50    Compara -> GT
Rule 51    Compara -> LT
Rule 52    Compara -> DIFERENTEDE
Rule 53    Compara -> MAYORQUE
Rule 54    Compara -> MENORQUE
Rule 55    Compara -> MAYORIGUALQUE
Rule 56    Compara -> MENORIGUALQUE
Rule 57    Compara -> AND
Rule 58    Compara -> OR
Rule 59    Exp -> Exp PLUS Termino
Rule 60    Exp -> Exp MINUS Termino
Rule 61    Exp -> Exp ORBIT Termino
Rule 62    Exp -> Exp XORBIT Termino
Rule 63    Exp -> Exp ANDBIT Termino
Rule 64    Exp -> Termino
Rule 65    Termino -> Termino TIMES Factor
Rule 66    Termino -> Termino DIVIDE Factor
Rule 67    Termino -> Termino AND Factor
Rule 68    Termino -> Factor
Rule 69    Factor -> LPAREN Expresion RPAREN
Rule 70    Factor -> CTE
Rule 71    Factor -> ID
Rule 72    CTE -> Entero
Rule 73    CTE -> ConstanteFlotante
Rule 74    CTE -> ConstanteCadena
Rule 75    CTE -> ConstanteCaracter
Rule 76    Entero -> EnteroDecimal
Rule 77    Entero -> EnteroHexadecimal
Rule 78    Entero -> EnteroBinario
Rule 79    NULL -> <empty>
Rule 80    Contenido -> Estatuto Contenido
Rule 81    Contenido -> NULL
Rule 82    Variables_Globales -> R
Rule 83    R -> TIPO COLON ID seenIDglobVar globDeclOption SEMICOLON R
Rule 84    R -> NULL
Rule 85    globDeclOption -> NULL
Rule 86    globDeclOption -> Expresion
Rule 87    seenIDglobVar -> <empty>
Rule 88    TIPO -> ENTERO
Rule 89    TIPO -> FLOTANTE
Rule 90    TIPO -> CADENA
Rule 91    TIPO -> CARACTER

Terminals, with rules where they appear

AND                  : 57 67
ANDBIT               : 63
B                    : 42
C                    : 43
CADENA               : 90
CARACTER             : 91
CICLO                : 45
COLON                : 7 31 32 83
COMMA                : 13 36
ConstanteCadena      : 74
ConstanteCaracter    : 75
ConstanteFlotante    : 73
D                    : 44
DIFERENTEDE          : 52
DIVIDE               : 66
ENTERO               : 88
EQUALS               : 27 32 41
ESCRIBEPUERTO        : 40
EnteroBinario        : 78
EnteroDecimal        : 76
EnteroHexadecimal    : 77
FLOTANTE             : 89
FUNCION              : 7
GT                   : 50
ID                   : 1 7 12 13 25 26 27 31 32 38 40 41 71 83
IMPRIMECONSOLA       : 35
LCBRACE              : 1 7 34 34 45
LEEPUERTO            : 41
LPAREN               : 7 25 26 30 34 45 69
LT                   : 51
MAYORIGUALQUE        : 55
MAYORQUE             : 53
MENORIGUALQUE        : 56
MENORQUE             : 54
MINUS                : 60
NOT                  : 48
OR                   : 58
ORBIT                : 61
PLUS                 : 59
PROGRAMA             : 1
RCBRACE              : 1 7 34 34 45
REGRESA              : 24
RPAREN               : 7 25 26 30 34 45 69
SEMICOLON            : 1 7 24 25 26 28 30 31 32 35 40 41 83
SI                   : 34
SINO                 : 34
TIMES                : 65
XORBIT               : 62
error                : 

Nonterminals, with rules where they appear

ARG                  : 30 36 37
AssignOption         : 27
CTE                  : 39 70
Compara              : 47 48
Contenido            : 1 7 34 34 45 80
Declaracion_de_variables : 21
ESTRUCTURA           : 0
EX                   : 46
Entero               : 72
Estatuto             : 80
Estatuto_Asignacion  : 15
Estatuto_Ciclo       : 18
Estatuto_Condicion   : 16
Estatuto_Escritura_de_puerto : 17
Estatuto_Lectura_de_puerto : 19
EstructuraFuncion    : 5 6
Exp                  : 47 47 48 48 49 59 60 61 62 63
Expresion            : 24 28 32 34 45 69 86
Factor               : 65 66 67 68
Funciones            : 1 6
Imprimir             : 20
LlamadaFuncion       : 22 29
MULTIARG             : 25 35 36
NULL                 : 4 11 81 84 85
PUERTO               : 40 41
Para                 : 10 13
Parametros           : 7
R                    : 82 83
TIPO                 : 7 12 13 30 31 32 83
Termino              : 59 60 61 62 63 64 65 66 67
Variables_Globales   : 1
funcExit             : 7
globDeclOption       : 83
programExit          : 1
regresaDeFuncion     : 23
seenIDdeclVar        : 31 32
seenIDfunc           : 7
seenIDglobVar        : 83
seenIDparam          : 12 13
seenIDprograma       : 1

Parsing method: LALR

state 0

    (0) S' -> . ESTRUCTURA
    (1) ESTRUCTURA -> . Funciones PROGRAMA ID seenIDprograma SEMICOLON Variables_Globales LCBRACE Contenido RCBRACE programExit
    (4) Funciones -> . NULL
    (5) Funciones -> . EstructuraFuncion
    (6) Funciones -> . EstructuraFuncion Funciones
    (79) NULL -> .
    (7) EstructuraFuncion -> . FUNCION ID seenIDfunc LPAREN Parametros RPAREN COLON TIPO SEMICOLON LCBRACE Contenido RCBRACE funcExit

    PROGRAMA        reduce using rule 79 (NULL -> .)
    FUNCION         shift and go to state 5

    EstructuraFuncion              shift and go to state 2
    ESTRUCTURA                     shift and go to state 3
    NULL                           shift and go to state 1
    Funciones                      shift and go to state 4

state 1

    (4) Funciones -> NULL .

    PROGRAMA        reduce using rule 4 (Funciones -> NULL .)


state 2

    (5) Funciones -> EstructuraFuncion .
    (6) Funciones -> EstructuraFuncion . Funciones
    (4) Funciones -> . NULL
    (5) Funciones -> . EstructuraFuncion
    (6) Funciones -> . EstructuraFuncion Funciones
    (79) NULL -> .
    (7) EstructuraFuncion -> . FUNCION ID seenIDfunc LPAREN Parametros RPAREN COLON TIPO SEMICOLON LCBRACE Contenido RCBRACE funcExit

  ! reduce/reduce conflict for PROGRAMA resolved using rule 5 (Funciones -> EstructuraFuncion .)
    PROGRAMA        reduce using rule 5 (Funciones -> EstructuraFuncion .)
    FUNCION         shift and go to state 5

  ! PROGRAMA        [ reduce using rule 79 (NULL -> .) ]

    EstructuraFuncion              shift and go to state 2
    NULL                           shift and go to state 1
    Funciones                      shift and go to state 6

state 3

    (0) S' -> ESTRUCTURA .



state 4

    (1) ESTRUCTURA -> Funciones . PROGRAMA ID seenIDprograma SEMICOLON Variables_Globales LCBRACE Contenido RCBRACE programExit

    PROGRAMA        shift and go to state 7


state 5

    (7) EstructuraFuncion -> FUNCION . ID seenIDfunc LPAREN Parametros RPAREN COLON TIPO SEMICOLON LCBRACE Contenido RCBRACE funcExit

    ID              shift and go to state 8


state 6

    (6) Funciones -> EstructuraFuncion Funciones .

    PROGRAMA        reduce using rule 6 (Funciones -> EstructuraFuncion Funciones .)


state 7

    (1) ESTRUCTURA -> Funciones PROGRAMA . ID seenIDprograma SEMICOLON Variables_Globales LCBRACE Contenido RCBRACE programExit

    ID              shift and go to state 9


state 8

    (7) EstructuraFuncion -> FUNCION ID . seenIDfunc LPAREN Parametros RPAREN COLON TIPO SEMICOLON LCBRACE Contenido RCBRACE funcExit
    (8) seenIDfunc -> .

    LPAREN          reduce using rule 8 (seenIDfunc -> .)

    seenIDfunc                     shift and go to state 10

state 9

    (1) ESTRUCTURA -> Funciones PROGRAMA ID . seenIDprograma SEMICOLON Variables_Globales LCBRACE Contenido RCBRACE programExit
    (2) seenIDprograma -> .

    SEMICOLON       reduce using rule 2 (seenIDprograma -> .)

    seenIDprograma                 shift and go to state 11

state 10

    (7) EstructuraFuncion -> FUNCION ID seenIDfunc . LPAREN Parametros RPAREN COLON TIPO SEMICOLON LCBRACE Contenido RCBRACE funcExit

    LPAREN          shift and go to state 12


state 11

    (1) ESTRUCTURA -> Funciones PROGRAMA ID seenIDprograma . SEMICOLON Variables_Globales LCBRACE Contenido RCBRACE programExit

    SEMICOLON       shift and go to state 13


state 12

    (7) EstructuraFuncion -> FUNCION ID seenIDfunc LPAREN . Parametros RPAREN COLON TIPO SEMICOLON LCBRACE Contenido RCBRACE funcExit
    (10) Parametros -> . Para
    (11) Para -> . NULL
    (12) Para -> . TIPO ID seenIDparam
    (13) Para -> . TIPO ID seenIDparam COMMA Para
    (79) NULL -> .
    (88) TIPO -> . ENTERO
    (89) TIPO -> . FLOTANTE
    (90) TIPO -> . CADENA
    (91) TIPO -> . CARACTER

    RPAREN          reduce using rule 79 (NULL -> .)
    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19
    CADENA          shift and go to state 17
    CARACTER        shift and go to state 16

    TIPO                           shift and go to state 14
    Para                           shift and go to state 15
    Parametros                     shift and go to state 20
    NULL                           shift and go to state 21

state 13

    (1) ESTRUCTURA -> Funciones PROGRAMA ID seenIDprograma SEMICOLON . Variables_Globales LCBRACE Contenido RCBRACE programExit
    (82) Variables_Globales -> . R
    (83) R -> . TIPO COLON ID seenIDglobVar globDeclOption SEMICOLON R
    (84) R -> . NULL
    (88) TIPO -> . ENTERO
    (89) TIPO -> . FLOTANTE
    (90) TIPO -> . CADENA
    (91) TIPO -> . CARACTER
    (79) NULL -> .

    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19
    CADENA          shift and go to state 17
    CARACTER        shift and go to state 16
    LCBRACE         reduce using rule 79 (NULL -> .)

    TIPO                           shift and go to state 25
    Variables_Globales             shift and go to state 22
    R                              shift and go to state 24
    NULL                           shift and go to state 23

state 14

    (12) Para -> TIPO . ID seenIDparam
    (13) Para -> TIPO . ID seenIDparam COMMA Para

    ID              shift and go to state 26


state 15

    (10) Parametros -> Para .

    RPAREN          reduce using rule 10 (Parametros -> Para .)


state 16

    (91) TIPO -> CARACTER .

    COLON           reduce using rule 91 (TIPO -> CARACTER .)
    SEMICOLON       reduce using rule 91 (TIPO -> CARACTER .)
    ID              reduce using rule 91 (TIPO -> CARACTER .)
    LPAREN          reduce using rule 91 (TIPO -> CARACTER .)


state 17

    (90) TIPO -> CADENA .

    COLON           reduce using rule 90 (TIPO -> CADENA .)
    SEMICOLON       reduce using rule 90 (TIPO -> CADENA .)
    ID              reduce using rule 90 (TIPO -> CADENA .)
    LPAREN          reduce using rule 90 (TIPO -> CADENA .)


state 18

    (88) TIPO -> ENTERO .

    COLON           reduce using rule 88 (TIPO -> ENTERO .)
    SEMICOLON       reduce using rule 88 (TIPO -> ENTERO .)
    ID              reduce using rule 88 (TIPO -> ENTERO .)
    LPAREN          reduce using rule 88 (TIPO -> ENTERO .)


state 19

    (89) TIPO -> FLOTANTE .

    COLON           reduce using rule 89 (TIPO -> FLOTANTE .)
    SEMICOLON       reduce using rule 89 (TIPO -> FLOTANTE .)
    ID              reduce using rule 89 (TIPO -> FLOTANTE .)
    LPAREN          reduce using rule 89 (TIPO -> FLOTANTE .)


state 20

    (7) EstructuraFuncion -> FUNCION ID seenIDfunc LPAREN Parametros . RPAREN COLON TIPO SEMICOLON LCBRACE Contenido RCBRACE funcExit

    RPAREN          shift and go to state 27


state 21

    (11) Para -> NULL .

    RPAREN          reduce using rule 11 (Para -> NULL .)


state 22

    (1) ESTRUCTURA -> Funciones PROGRAMA ID seenIDprograma SEMICOLON Variables_Globales . LCBRACE Contenido RCBRACE programExit

    LCBRACE         shift and go to state 28


state 23

    (84) R -> NULL .

    LCBRACE         reduce using rule 84 (R -> NULL .)


state 24

    (82) Variables_Globales -> R .

    LCBRACE         reduce using rule 82 (Variables_Globales -> R .)


state 25

    (83) R -> TIPO . COLON ID seenIDglobVar globDeclOption SEMICOLON R

    COLON           shift and go to state 29


state 26

    (12) Para -> TIPO ID . seenIDparam
    (13) Para -> TIPO ID . seenIDparam COMMA Para
    (14) seenIDparam -> .

    COMMA           reduce using rule 14 (seenIDparam -> .)
    RPAREN          reduce using rule 14 (seenIDparam -> .)

    seenIDparam                    shift and go to state 30

state 27

    (7) EstructuraFuncion -> FUNCION ID seenIDfunc LPAREN Parametros RPAREN . COLON TIPO SEMICOLON LCBRACE Contenido RCBRACE funcExit

    COLON           shift and go to state 31


state 28

    (1) ESTRUCTURA -> Funciones PROGRAMA ID seenIDprograma SEMICOLON Variables_Globales LCBRACE . Contenido RCBRACE programExit
    (80) Contenido -> . Estatuto Contenido
    (81) Contenido -> . NULL
    (15) Estatuto -> . Estatuto_Asignacion
    (16) Estatuto -> . Estatuto_Condicion
    (17) Estatuto -> . Estatuto_Escritura_de_puerto
    (18) Estatuto -> . Estatuto_Ciclo
    (19) Estatuto -> . Estatuto_Lectura_de_puerto
    (20) Estatuto -> . Imprimir
    (21) Estatuto -> . Declaracion_de_variables
    (22) Estatuto -> . LlamadaFuncion
    (23) Estatuto -> . regresaDeFuncion
    (79) NULL -> .
    (27) Estatuto_Asignacion -> . ID EQUALS AssignOption
    (34) Estatuto_Condicion -> . SI LPAREN Expresion RPAREN LCBRACE Contenido RCBRACE SINO LCBRACE Contenido RCBRACE
    (40) Estatuto_Escritura_de_puerto -> . ESCRIBEPUERTO PUERTO ID SEMICOLON
    (45) Estatuto_Ciclo -> . CICLO LPAREN Expresion RPAREN LCBRACE Contenido RCBRACE
    (41) Estatuto_Lectura_de_puerto -> . ID EQUALS LEEPUERTO PUERTO SEMICOLON
    (35) Imprimir -> . IMPRIMECONSOLA MULTIARG SEMICOLON
    (31) Declaracion_de_variables -> . TIPO COLON ID seenIDdeclVar SEMICOLON
    (32) Declaracion_de_variables -> . TIPO COLON ID seenIDdeclVar EQUALS Expresion SEMICOLON
    (25) LlamadaFuncion -> . ID LPAREN MULTIARG RPAREN SEMICOLON
    (26) LlamadaFuncion -> . ID LPAREN RPAREN SEMICOLON
    (24) regresaDeFuncion -> . REGRESA Expresion SEMICOLON
    (88) TIPO -> . ENTERO
    (89) TIPO -> . FLOTANTE
    (90) TIPO -> . CADENA
    (91) TIPO -> . CARACTER

    RCBRACE         reduce using rule 79 (NULL -> .)
    ID              shift and go to state 46
    SI              shift and go to state 48
    ESCRIBEPUERTO   shift and go to state 45
    CICLO           shift and go to state 33
    IMPRIMECONSOLA  shift and go to state 32
    REGRESA         shift and go to state 41
    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19
    CADENA          shift and go to state 17
    CARACTER        shift and go to state 16

    Contenido                      shift and go to state 34
    Estatuto                       shift and go to state 35
    LlamadaFuncion                 shift and go to state 36
    NULL                           shift and go to state 37
    Declaracion_de_variables       shift and go to state 38
    regresaDeFuncion               shift and go to state 39
    TIPO                           shift and go to state 47
    Imprimir                       shift and go to state 40
    Estatuto_Lectura_de_puerto     shift and go to state 42
    Estatuto_Escritura_de_puerto   shift and go to state 43
    Estatuto_Ciclo                 shift and go to state 44
    Estatuto_Asignacion            shift and go to state 50
    Estatuto_Condicion             shift and go to state 49

state 29

    (83) R -> TIPO COLON . ID seenIDglobVar globDeclOption SEMICOLON R

    ID              shift and go to state 51


state 30

    (12) Para -> TIPO ID seenIDparam .
    (13) Para -> TIPO ID seenIDparam . COMMA Para

    RPAREN          reduce using rule 12 (Para -> TIPO ID seenIDparam .)
    COMMA           shift and go to state 52


state 31

    (7) EstructuraFuncion -> FUNCION ID seenIDfunc LPAREN Parametros RPAREN COLON . TIPO SEMICOLON LCBRACE Contenido RCBRACE funcExit
    (88) TIPO -> . ENTERO
    (89) TIPO -> . FLOTANTE
    (90) TIPO -> . CADENA
    (91) TIPO -> . CARACTER

    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19
    CADENA          shift and go to state 17
    CARACTER        shift and go to state 16

    TIPO                           shift and go to state 53

state 32

    (35) Imprimir -> IMPRIMECONSOLA . MULTIARG SEMICOLON
    (36) MULTIARG -> . ARG COMMA MULTIARG
    (37) MULTIARG -> . ARG
    (38) ARG -> . ID
    (39) ARG -> . CTE
    (72) CTE -> . Entero
    (73) CTE -> . ConstanteFlotante
    (74) CTE -> . ConstanteCadena
    (75) CTE -> . ConstanteCaracter
    (76) Entero -> . EnteroDecimal
    (77) Entero -> . EnteroHexadecimal
    (78) Entero -> . EnteroBinario

    ID              shift and go to state 63
    ConstanteFlotante shift and go to state 56
    ConstanteCadena shift and go to state 61
    ConstanteCaracter shift and go to state 58
    EnteroDecimal   shift and go to state 57
    EnteroHexadecimal shift and go to state 54
    EnteroBinario   shift and go to state 62

    CTE                            shift and go to state 59
    Entero                         shift and go to state 64
    MULTIARG                       shift and go to state 55
    ARG                            shift and go to state 60

state 33

    (45) Estatuto_Ciclo -> CICLO . LPAREN Expresion RPAREN LCBRACE Contenido RCBRACE

    LPAREN          shift and go to state 65


state 34

    (1) ESTRUCTURA -> Funciones PROGRAMA ID seenIDprograma SEMICOLON Variables_Globales LCBRACE Contenido . RCBRACE programExit

    RCBRACE         shift and go to state 66


state 35

    (80) Contenido -> Estatuto . Contenido
    (80) Contenido -> . Estatuto Contenido
    (81) Contenido -> . NULL
    (15) Estatuto -> . Estatuto_Asignacion
    (16) Estatuto -> . Estatuto_Condicion
    (17) Estatuto -> . Estatuto_Escritura_de_puerto
    (18) Estatuto -> . Estatuto_Ciclo
    (19) Estatuto -> . Estatuto_Lectura_de_puerto
    (20) Estatuto -> . Imprimir
    (21) Estatuto -> . Declaracion_de_variables
    (22) Estatuto -> . LlamadaFuncion
    (23) Estatuto -> . regresaDeFuncion
    (79) NULL -> .
    (27) Estatuto_Asignacion -> . ID EQUALS AssignOption
    (34) Estatuto_Condicion -> . SI LPAREN Expresion RPAREN LCBRACE Contenido RCBRACE SINO LCBRACE Contenido RCBRACE
    (40) Estatuto_Escritura_de_puerto -> . ESCRIBEPUERTO PUERTO ID SEMICOLON
    (45) Estatuto_Ciclo -> . CICLO LPAREN Expresion RPAREN LCBRACE Contenido RCBRACE
    (41) Estatuto_Lectura_de_puerto -> . ID EQUALS LEEPUERTO PUERTO SEMICOLON
    (35) Imprimir -> . IMPRIMECONSOLA MULTIARG SEMICOLON
    (31) Declaracion_de_variables -> . TIPO COLON ID seenIDdeclVar SEMICOLON
    (32) Declaracion_de_variables -> . TIPO COLON ID seenIDdeclVar EQUALS Expresion SEMICOLON
    (25) LlamadaFuncion -> . ID LPAREN MULTIARG RPAREN SEMICOLON
    (26) LlamadaFuncion -> . ID LPAREN RPAREN SEMICOLON
    (24) regresaDeFuncion -> . REGRESA Expresion SEMICOLON
    (88) TIPO -> . ENTERO
    (89) TIPO -> . FLOTANTE
    (90) TIPO -> . CADENA
    (91) TIPO -> . CARACTER

    RCBRACE         reduce using rule 79 (NULL -> .)
    ID              shift and go to state 46
    SI              shift and go to state 48
    ESCRIBEPUERTO   shift and go to state 45
    CICLO           shift and go to state 33
    IMPRIMECONSOLA  shift and go to state 32
    REGRESA         shift and go to state 41
    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19
    CADENA          shift and go to state 17
    CARACTER        shift and go to state 16

    Estatuto_Lectura_de_puerto     shift and go to state 42
    regresaDeFuncion               shift and go to state 39
    TIPO                           shift and go to state 47
    Contenido                      shift and go to state 67
    Estatuto_Escritura_de_puerto   shift and go to state 43
    Estatuto                       shift and go to state 35
    Estatuto_Ciclo                 shift and go to state 44
    Estatuto_Condicion             shift and go to state 49
    Imprimir                       shift and go to state 40
    LlamadaFuncion                 shift and go to state 36
    Estatuto_Asignacion            shift and go to state 50
    NULL                           shift and go to state 37
    Declaracion_de_variables       shift and go to state 38

state 36

    (22) Estatuto -> LlamadaFuncion .

    ID              reduce using rule 22 (Estatuto -> LlamadaFuncion .)
    SI              reduce using rule 22 (Estatuto -> LlamadaFuncion .)
    ESCRIBEPUERTO   reduce using rule 22 (Estatuto -> LlamadaFuncion .)
    CICLO           reduce using rule 22 (Estatuto -> LlamadaFuncion .)
    IMPRIMECONSOLA  reduce using rule 22 (Estatuto -> LlamadaFuncion .)
    REGRESA         reduce using rule 22 (Estatuto -> LlamadaFuncion .)
    ENTERO          reduce using rule 22 (Estatuto -> LlamadaFuncion .)
    FLOTANTE        reduce using rule 22 (Estatuto -> LlamadaFuncion .)
    CADENA          reduce using rule 22 (Estatuto -> LlamadaFuncion .)
    CARACTER        reduce using rule 22 (Estatuto -> LlamadaFuncion .)
    RCBRACE         reduce using rule 22 (Estatuto -> LlamadaFuncion .)


state 37

    (81) Contenido -> NULL .

    RCBRACE         reduce using rule 81 (Contenido -> NULL .)


state 38

    (21) Estatuto -> Declaracion_de_variables .

    ID              reduce using rule 21 (Estatuto -> Declaracion_de_variables .)
    SI              reduce using rule 21 (Estatuto -> Declaracion_de_variables .)
    ESCRIBEPUERTO   reduce using rule 21 (Estatuto -> Declaracion_de_variables .)
    CICLO           reduce using rule 21 (Estatuto -> Declaracion_de_variables .)
    IMPRIMECONSOLA  reduce using rule 21 (Estatuto -> Declaracion_de_variables .)
    REGRESA         reduce using rule 21 (Estatuto -> Declaracion_de_variables .)
    ENTERO          reduce using rule 21 (Estatuto -> Declaracion_de_variables .)
    FLOTANTE        reduce using rule 21 (Estatuto -> Declaracion_de_variables .)
    CADENA          reduce using rule 21 (Estatuto -> Declaracion_de_variables .)
    CARACTER        reduce using rule 21 (Estatuto -> Declaracion_de_variables .)
    RCBRACE         reduce using rule 21 (Estatuto -> Declaracion_de_variables .)


state 39

    (23) Estatuto -> regresaDeFuncion .

    ID              reduce using rule 23 (Estatuto -> regresaDeFuncion .)
    SI              reduce using rule 23 (Estatuto -> regresaDeFuncion .)
    ESCRIBEPUERTO   reduce using rule 23 (Estatuto -> regresaDeFuncion .)
    CICLO           reduce using rule 23 (Estatuto -> regresaDeFuncion .)
    IMPRIMECONSOLA  reduce using rule 23 (Estatuto -> regresaDeFuncion .)
    REGRESA         reduce using rule 23 (Estatuto -> regresaDeFuncion .)
    ENTERO          reduce using rule 23 (Estatuto -> regresaDeFuncion .)
    FLOTANTE        reduce using rule 23 (Estatuto -> regresaDeFuncion .)
    CADENA          reduce using rule 23 (Estatuto -> regresaDeFuncion .)
    CARACTER        reduce using rule 23 (Estatuto -> regresaDeFuncion .)
    RCBRACE         reduce using rule 23 (Estatuto -> regresaDeFuncion .)


state 40

    (20) Estatuto -> Imprimir .

    ID              reduce using rule 20 (Estatuto -> Imprimir .)
    SI              reduce using rule 20 (Estatuto -> Imprimir .)
    ESCRIBEPUERTO   reduce using rule 20 (Estatuto -> Imprimir .)
    CICLO           reduce using rule 20 (Estatuto -> Imprimir .)
    IMPRIMECONSOLA  reduce using rule 20 (Estatuto -> Imprimir .)
    REGRESA         reduce using rule 20 (Estatuto -> Imprimir .)
    ENTERO          reduce using rule 20 (Estatuto -> Imprimir .)
    FLOTANTE        reduce using rule 20 (Estatuto -> Imprimir .)
    CADENA          reduce using rule 20 (Estatuto -> Imprimir .)
    CARACTER        reduce using rule 20 (Estatuto -> Imprimir .)
    RCBRACE         reduce using rule 20 (Estatuto -> Imprimir .)


state 41

    (24) regresaDeFuncion -> REGRESA . Expresion SEMICOLON
    (46) Expresion -> . EX
    (47) EX -> . Exp Compara Exp
    (48) EX -> . NOT Exp Compara Exp
    (49) EX -> . Exp
    (59) Exp -> . Exp PLUS Termino
    (60) Exp -> . Exp MINUS Termino
    (61) Exp -> . Exp ORBIT Termino
    (62) Exp -> . Exp XORBIT Termino
    (63) Exp -> . Exp ANDBIT Termino
    (64) Exp -> . Termino
    (65) Termino -> . Termino TIMES Factor
    (66) Termino -> . Termino DIVIDE Factor
    (67) Termino -> . Termino AND Factor
    (68) Termino -> . Factor
    (69) Factor -> . LPAREN Expresion RPAREN
    (70) Factor -> . CTE
    (71) Factor -> . ID
    (72) CTE -> . Entero
    (73) CTE -> . ConstanteFlotante
    (74) CTE -> . ConstanteCadena
    (75) CTE -> . ConstanteCaracter
    (76) Entero -> . EnteroDecimal
    (77) Entero -> . EnteroHexadecimal
    (78) Entero -> . EnteroBinario

    NOT             shift and go to state 76
    LPAREN          shift and go to state 73
    ID              shift and go to state 74
    ConstanteFlotante shift and go to state 56
    ConstanteCadena shift and go to state 61
    ConstanteCaracter shift and go to state 58
    EnteroDecimal   shift and go to state 57
    EnteroHexadecimal shift and go to state 54
    EnteroBinario   shift and go to state 62

    Expresion                      shift and go to state 71
    CTE                            shift and go to state 69
    EX                             shift and go to state 72
    Exp                            shift and go to state 68
    Factor                         shift and go to state 70
    Entero                         shift and go to state 64
    Termino                        shift and go to state 75

state 42

    (19) Estatuto -> Estatuto_Lectura_de_puerto .

    ID              reduce using rule 19 (Estatuto -> Estatuto_Lectura_de_puerto .)
    SI              reduce using rule 19 (Estatuto -> Estatuto_Lectura_de_puerto .)
    ESCRIBEPUERTO   reduce using rule 19 (Estatuto -> Estatuto_Lectura_de_puerto .)
    CICLO           reduce using rule 19 (Estatuto -> Estatuto_Lectura_de_puerto .)
    IMPRIMECONSOLA  reduce using rule 19 (Estatuto -> Estatuto_Lectura_de_puerto .)
    REGRESA         reduce using rule 19 (Estatuto -> Estatuto_Lectura_de_puerto .)
    ENTERO          reduce using rule 19 (Estatuto -> Estatuto_Lectura_de_puerto .)
    FLOTANTE        reduce using rule 19 (Estatuto -> Estatuto_Lectura_de_puerto .)
    CADENA          reduce using rule 19 (Estatuto -> Estatuto_Lectura_de_puerto .)
    CARACTER        reduce using rule 19 (Estatuto -> Estatuto_Lectura_de_puerto .)
    RCBRACE         reduce using rule 19 (Estatuto -> Estatuto_Lectura_de_puerto .)


state 43

    (17) Estatuto -> Estatuto_Escritura_de_puerto .

    ID              reduce using rule 17 (Estatuto -> Estatuto_Escritura_de_puerto .)
    SI              reduce using rule 17 (Estatuto -> Estatuto_Escritura_de_puerto .)
    ESCRIBEPUERTO   reduce using rule 17 (Estatuto -> Estatuto_Escritura_de_puerto .)
    CICLO           reduce using rule 17 (Estatuto -> Estatuto_Escritura_de_puerto .)
    IMPRIMECONSOLA  reduce using rule 17 (Estatuto -> Estatuto_Escritura_de_puerto .)
    REGRESA         reduce using rule 17 (Estatuto -> Estatuto_Escritura_de_puerto .)
    ENTERO          reduce using rule 17 (Estatuto -> Estatuto_Escritura_de_puerto .)
    FLOTANTE        reduce using rule 17 (Estatuto -> Estatuto_Escritura_de_puerto .)
    CADENA          reduce using rule 17 (Estatuto -> Estatuto_Escritura_de_puerto .)
    CARACTER        reduce using rule 17 (Estatuto -> Estatuto_Escritura_de_puerto .)
    RCBRACE         reduce using rule 17 (Estatuto -> Estatuto_Escritura_de_puerto .)


state 44

    (18) Estatuto -> Estatuto_Ciclo .
